# Connector

./: Cargo.toml  NOTES.md  README.md
gumshoe/: .gitignore  Cargo.toml  Database.dockerfile  README.md
gumshoe/db/: Database.dockerfile  INSERT.sql  UP.sql
gumshoe/scripts/: db-build.sh  db-connect.sh  do.sh
gumshoe/src/: handlers.rs  issue.rs  main.rs
gumshoe/static/issues/: new.html
gumshoe/templates/: 404.hbs  index.hbs  issue.hbs
gumshoe/templates/issues/: show.hbs
route/: Cargo.toml  NOTES.md
route/src/: lib.rs
route/tests/: function.rs
src/: lib.rs
src/connection/: mod.rs  router.rs  routing.rs
