[package]
name = "connector"
version = "0.0.1"
authors = ["Alexander McRae <mcraealex16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
proc-macro2 = "1.0"
route = {path = "route"}
serde = "1.0"
serde_json = "1.0"
