[package]
name = "route"
version = "0.1.0"
authors = ["Alexander McRae <mcraealex16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features=["extra-traits", "full"] }
quote = "1.0"
proc-macro2 = "1.0"
